[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eolib"
dynamic = ["version"]
description = 'Core library for writing applications related to Endless Online.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["endless-online"]
authors = [
  { name = "Jonah Jeleniewski", email = "cirrasbu@hotmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Games/Entertainment",
]
dependencies = []

[project.urls]
Documentation = "https://cirras.github.io/eolib-python"
Issues = "https://github.com/cirras/eolib-python/issues"
Source = "https://github.com/cirras/eolib-python"

[dependency-groups]
dev = [
  "coverage[toml]>=6.5",
  "keepachangelog==1.0.0",
  "mypy>=1.0.0",
  "pytest",
  "ruff",
  "furo>=2025.12.19; python_version >= '3.12'",
  "myst-parser>=5,<6; python_version >= '3.12'",
  "sphinx>=9,<10; python_version >= '3.12'",
  "sphinx-autobuild>=2025.8.25; python_version >= '3.12'",
  "sphinx-autodoc-typehints>=3.9.11; python_version >= '3.12'",
  "taskipy>=1.14.1",
]

[tool.hatch.version]
path = "src/eolib/__about__.py"

[tool.hatch.build.hooks.custom]
path = "protocol_build_hook.py"

[tool.hatch.build]
artifacts = [
  "src/eolib/protocol/_generated",
]

[tool.taskipy.tasks]
pre_test = "python protocol.py generate"
test = "coverage run -m pytest --no-header -v tests"
post_test = "coverage combine && coverage xml"

format = "ruff format ."
"format:check" = "ruff format --check ."

typing = "python protocol.py generate && mypy --install-types --non-interactive src"

"pre_docs:build" = "python protocol.py generate"
"docs:build" = "sphinx-build -E -b html docs docs/_build/html"

"pre_docs:serve" = "python protocol.py generate"
"docs:serve" = "sphinx-autobuild --ignore \"docs/_build\" docs docs/_build/html"

"pre_docs:deploy" = "python protocol.py generate"
"docs:deploy" = "python docs/deploy.py"

"release:prepare" = "python prepare_release.py"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.coverage.run]
source_pkgs = ["eolib"]
branch = true
parallel = true
relative_files = true
omit = [
  "src/eolib/__about__.py",
]

[tool.coverage.paths]
eolib = ["src/eolib"]
tests = ["tests"]
